--- a/src/package.json
+++ b/src/package.json
@@ -7,6 +7,8 @@
   "main": "lib/index.js",
   "dependencies": {},
   "devDependencies": {
-    "mocha": "*"
+    {{#if tests}}"mocha": "*",
+    "should": "*"{{/if}}{{#if debug}},
+    "debug": "*"{{/if}}
   }
 }
